# metamorphosis

./: Cargo.toml  README.md
metamorphosis/: Cargo.toml  Makefile  README.md
metamorphosis/src/: lib.rs  validators.rs
metamorphosis/src/clients/: forge.rs  mod.rs  mojang.rs
metamorphosis/src/models/: forge.rs  misc.rs  mod.rs  mojang.rs  polymc.rs
polymorphosis/: Cargo.toml  README.md
polymorphosis/src/: main.rs
src/: lib.rs  validators.rs
src/clients/: fabric.rs  forge.rs  liteloader.rs  mod.rs
src/models/: fabric.rs  forge.rs  liteloader.rs  mod.rs  mojang.rs
