[package]
name = "metamorphosis"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono =  { version = "0.4.19", features = ["serde"] }
custom_error = "1.9.2"
http-cache-reqwest = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
reqwest-middleware = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
